ipc/ipdl/test/ipdl/error/undefMutualRecUnion.ipdl
union X { Y; };
union Y { Z; };
union Z { X; };

protocol undefMutualRecUnion {
child: __delete__(X x);
};
